--- a/src/components/FooterBox/FooterBox.module.scss
+++ b/src/components/FooterBox/FooterBox.module.scss
@@ -112,3 +112,9 @@
     flex-direction: column-reverse;
   }
 }
+@media screen and (max-width: 400px) {
+  .brand {
+    flex-direction: column;
+  }
+}
+
