--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,10 +4,15 @@
   justify-content: space-between;
 
   margin: auto;
-  width: 100%;
   max-width: 1258px;
 
   padding: 20px 1em;
+
+  overflow-x: hidden;
+
+  width: -moz-available;
+  width: -webkit-fill-available;
+  width: stretch;
 }
 
 .headerGroup {
